--- a/package.json
+++ b/package.json
@@ -9,18 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.7.0",
+    "@clerk/nextjs": "^5.1.4",
+    "@clerk/shared": "^2.3.0",
+    "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@tabler/icons-react": "^3.6.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "convex": "^1.12.1",
+    "framer-motion": "^11.2.10",
+    "lucide-react": "^0.383.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "^14.2.4",
+    "query-string": "^9.0.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.51.5",
+    "react-resizable-panels": "^2.0.19",
+    "shadcn-ui": "^0.2.3",
+    "svix": "^1.24.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
