--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@clerk/nextjs": "^5.1.4",
     "@clerk/shared": "^2.3.0",
     "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons-react": "^3.6.0",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -30,6 +34,7 @@
     "lucide-react": "^0.383.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
+    "node-html-parser": "^6.1.13",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countup": "^6.5.3",
