--- a/package.json
+++ b/package.json
@@ -9,53 +9,60 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/elements": "^0.7.0",
-    "@clerk/nextjs": "^5.1.4",
-    "@clerk/shared": "^2.3.0",
-    "@hookform/resolvers": "^3.4.2",
+    "@clerk/elements": "^0.22.0",
+    "@clerk/nextjs": "^6.9",
+    "@clerk/shared": "^2.20.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tabler/icons-react": "^3.6.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "convex": "^1.12.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.383.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.4",
+    "next": "^15",
     "node-html-parser": "^6.1.13",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countup": "^6.5.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.54.1",
     "react-markdown": "^9.0.1",
-    "react-resizable-panels": "^2.0.19",
+    "react-resizable-panels": "^2.1.7",
     "shadcn-ui": "^0.2.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sync-fetch": "^0.4.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
