--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/elements": "^0.22.0",
     "@clerk/nextjs": "^6.9",
     "@clerk/shared": "^2.20.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -21,11 +24,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tabler/icons-react": "^3.6.0",
@@ -42,6 +47,7 @@
     "node-html-parser": "^6.1.13",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-countup": "^6.5.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
@@ -50,6 +56,7 @@
     "react-hook-form": "^7.54.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.0",
     "shadcn-ui": "^0.2.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
